feat: 17 added jpa repositories implementation, added missing tests