@@ -3,10 +3,9 @@ package hub.event.scrapers.core;
 import hub.event.scrapers.core.datewithlocation.SingleEventDateWithLocation;
 import hub.event.scrapers.core.exceptions.EventDateInPastException;
 import hub.event.scrapers.core.scraper.ScraperConfig;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -17,6 +16,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -28,136 +28,216 @@ class ScraperRunServiceTest {
   private EventFacadeAdapter eventFacadeAdapter;
   @Mock
   private LastScrapedEventMarkerRepository lastScrapedEventMarkerRepository;
-  @Captor
-  private ArgumentCaptor<List<ScrapedEvent>> scrapedEventListCaptor;
 
-  @Test
-  void whenListContainsInactiveScraperThenSkipRunIt() {
-    //given
-    final PageScraperPort activeScraper1 = mock(PageScraperPort.class);
-    final PageScraperPort activeScraper2 = mock(PageScraperPort.class);
-    final PageScraperPort inactiveScraper = mock(PageScraperPort.class);
+  @Nested
+  class ScrapersStartTest {
 
-    final String activeScraperName1 = "active1";
-    final String activeScraperName2 = "active2";
-    final String inactiveScraperName = "inactive2";
+    @Test
+    void whenListContainsInactiveScraperThenSkipRunIt() {
+      //given
+      final PageScraperPort activeScraper1 = mock(PageScraperPort.class);
+      final PageScraperPort activeScraper2 = mock(PageScraperPort.class);
+      final PageScraperPort inactiveScraper = mock(PageScraperPort.class);
 
-    final ScraperConfig activeScraper1Config = new ScraperConfig(activeScraperName1, ZoneId.systemDefault(), true);
-    final ScraperConfig activeScraper2Config = new ScraperConfig(activeScraperName2, ZoneId.systemDefault(), true);
-    final ScraperConfig inactiveScraperConfig = new ScraperConfig(inactiveScraperName, ZoneId.systemDefault(), false);
+      final String activeScraperName1 = "active1";
+      final String activeScraperName2 = "active2";
+      final String inactiveScraperName = "inactive2";
 
-    final List<PageScraperPort> pageScrapers = Arrays.asList(activeScraper1, activeScraper2, inactiveScraper);
-    final List<ScraperConfig> scraperConfigs = new ArrayList<>(Arrays.asList(activeScraper1Config, activeScraper2Config, inactiveScraperConfig));
-    final ScraperRunService scraperRunService = new ScraperRunService(scraperConfigRepository, eventFacadeAdapter, lastScrapedEventMarkerRepository, pageScrapers);
+      final ScraperConfig activeScraper1Config = new ScraperConfig(1, activeScraperName1, ZoneId.systemDefault(), true);
+      final ScraperConfig activeScraper2Config = new ScraperConfig(2, activeScraperName2, ZoneId.systemDefault(), true);
+      final ScraperConfig inactiveScraperConfig = new ScraperConfig(3, inactiveScraperName, ZoneId.systemDefault(), false);
 
-    //when
-    when(activeScraper1.configurationName()).thenReturn(activeScraperName1);
-    when(activeScraper2.configurationName()).thenReturn(activeScraperName2);
-    when(inactiveScraper.configurationName()).thenReturn(inactiveScraperName);
+      final List<PageScraperPort> pageScrapers = Arrays.asList(activeScraper1, activeScraper2, inactiveScraper);
+      final List<ScraperConfig> scraperConfigs = new ArrayList<>(Arrays.asList(activeScraper1Config, activeScraper2Config, inactiveScraperConfig));
 
-    when(activeScraper1.configurationName()).thenReturn(activeScraperName1);
-    when(activeScraper2.configurationName()).thenReturn(activeScraperName2);
-    when(inactiveScraper.configurationName()).thenReturn(inactiveScraperName);
+      final ScraperIdNameCache scraperIdNameCache = new ScraperIdNameCache();
+      scraperIdNameCache.add(scraperConfigs);
+      final ScraperRunService scraperRunService = new ScraperRunService(scraperConfigRepository, eventFacadeAdapter, lastScrapedEventMarkerRepository, pageScrapers, scraperIdNameCache);
 
-    when(scraperConfigRepository.allScraperConfigs()).thenReturn(scraperConfigs);
+      //when
+      when(activeScraper1.configurationName()).thenReturn(activeScraperName1);
+      when(activeScraper2.configurationName()).thenReturn(activeScraperName2);
+      when(inactiveScraper.configurationName()).thenReturn(inactiveScraperName);
 
-    //then
-    scraperRunService.start();
+      when(activeScraper1.configurationName()).thenReturn(activeScraperName1);
+      when(activeScraper2.configurationName()).thenReturn(activeScraperName2);
+      when(inactiveScraper.configurationName()).thenReturn(inactiveScraperName);
 
-    verify(scraperConfigRepository, never()).create(anyString(), any(ZoneId.class), anyBoolean());
-    verify(activeScraper1).scrap();
-    verify(activeScraper2).scrap();
-    verify(inactiveScraper, never()).scrap();
+      when(scraperConfigRepository.allScraperConfigs()).thenReturn(scraperConfigs);
+
+      //then
+      scraperRunService.start();
+
+      verify(scraperConfigRepository, never()).create(anyString(), any(ZoneId.class), anyBoolean());
+      verify(activeScraper1).scrap();
+      verify(activeScraper2).scrap();
+      verify(inactiveScraper, never()).scrap();
+    }
+
+    @Test
+    void whenScrapedEventExistsThenSaveAsEvent() throws EventDateInPastException {
+      //given
+      final PageScraperPort activeScraper1 = mock(PageScraperPort.class);
+      final PageScraperPort activeScraper2 = mock(PageScraperPort.class);
+
+      final String activeScraperName1 = "active1";
+      final String activeScraperName2 = "active2";
+
+      final ScraperConfig activeScraper1Config = new ScraperConfig(10, activeScraperName1, ZoneId.systemDefault(), true);
+      final ScraperConfig activeScraper2Config = new ScraperConfig(11, activeScraperName2, ZoneId.systemDefault(), true);
+      final List<ScraperConfig> scraperConfigs = new ArrayList<>(Arrays.asList(activeScraper1Config, activeScraper2Config));
+
+      final ScrapedEvent scrapedEvent1 = ScrapedEvent.builder(SingleEventDateWithLocation.single(LocalDate.now().plusDays(1), LocalTime.now().plusHours(2), ZoneId.systemDefault(), "Palaven", "Addres 1", "location 2"))
+          .title("Title1")
+          .description("Description1")
+          .build();
+      final ScrapedEvent scrapedEvent2 = ScrapedEvent.builder(SingleEventDateWithLocation.single(LocalDate.now().plusDays(1), LocalTime.now().plusHours(2), ZoneId.systemDefault(), "Thessia", "Addres 2", "location 22"))
+          .title("Title2")
+          .description("Description2")
+          .build();
+      final ScrapedEvent scrapedEvent3 = ScrapedEvent.builder(SingleEventDateWithLocation.single(LocalDate.now().plusDays(1), LocalTime.now().plusHours(2), ZoneId.systemDefault(), "Eden Prime", "Addres 134", "location 166"))
+          .title("Title1")
+          .description("Description1")
+          .build();
+      final List<ScrapedEvent> scrapedEventList = Arrays.asList(scrapedEvent1, scrapedEvent2, scrapedEvent3);
+
+      final List<PageScraperPort> pageScrapers = Arrays.asList(activeScraper1, activeScraper2);
+      final ScraperIdNameCache scraperIdNameCache = new ScraperIdNameCache();
+      scraperIdNameCache.add(scraperConfigs);
+      final ScraperRunService scraperRunService = new ScraperRunService(scraperConfigRepository, eventFacadeAdapter, lastScrapedEventMarkerRepository, pageScrapers, scraperIdNameCache);
+
+      //when
+      when(activeScraper1.configurationName()).thenReturn(activeScraperName1);
+      when(activeScraper2.configurationName()).thenReturn(activeScraperName2);
+
+      when(activeScraper1.scrap()).thenReturn(Arrays.asList(scrapedEvent1));
+      when(activeScraper2.scrap()).thenReturn(Arrays.asList(scrapedEvent2, scrapedEvent3));
+
+      when(scraperConfigRepository.allScraperConfigs()).thenReturn(scraperConfigs);
+
+      //then
+      scraperRunService.start();
+
+      verify(activeScraper1).scrap();
+      verify(activeScraper2).scrap();
+      verify(eventFacadeAdapter).saveAll(scrapedEventList);
+    }
+
+    @Test
+    void whenScrapedEventSavedThenMakeLastScrapedEventMarkerDraftActive() throws EventDateInPastException {
+      //given
+      final PageScraperPort activeScraper1 = mock(PageScraperPort.class);
+      final PageScraperPort activeScraper2 = mock(PageScraperPort.class);
+
+      final String activeScraperName1 = "active1";
+      final String activeScraperName2 = "active2";
+
+      final ScraperConfig activeScraper1Config = new ScraperConfig(20, activeScraperName1, ZoneId.systemDefault(), true);
+      final ScraperConfig activeScraper2Config = new ScraperConfig(21, activeScraperName2, ZoneId.systemDefault(), true);
+      final List<ScraperConfig> scraperConfigs = new ArrayList<>(Arrays.asList(activeScraper1Config, activeScraper2Config));
+
+      final ScrapedEvent scrapedEvent1 = ScrapedEvent.builder(SingleEventDateWithLocation.single(LocalDate.now().plusDays(1), LocalTime.now().plusHours(2), ZoneId.systemDefault(), "Palaven", "Addres 1", "location 2"))
+          .title("Title1")
+          .description("Description1")
+          .build();
+      final ScrapedEvent scrapedEvent2 = ScrapedEvent.builder(SingleEventDateWithLocation.single(LocalDate.now().plusDays(1), LocalTime.now().plusHours(2), ZoneId.systemDefault(), "Thessia", "Addres 2", "location 22"))
+          .title("Title2")
+          .description("Description2")
+          .build();
+      final ScrapedEvent scrapedEvent3 = ScrapedEvent.builder(SingleEventDateWithLocation.single(LocalDate.now().plusDays(1), LocalTime.now().plusHours(2), ZoneId.systemDefault(), "Eden Prime", "Addres 134", "location 166"))
+          .title("Title1")
+          .description("Description1")
+          .build();
+
+      final List<PageScraperPort> pageScrapers = Arrays.asList(activeScraper1, activeScraper2);
+      final ScraperIdNameCache scraperIdNameCache = new ScraperIdNameCache();
+      scraperIdNameCache.add(scraperConfigs);
+      final ScraperRunService scraperRunService = new ScraperRunService(scraperConfigRepository, eventFacadeAdapter, lastScrapedEventMarkerRepository, pageScrapers, scraperIdNameCache);
+
+      //when
+      when(activeScraper1.configurationName()).thenReturn(activeScraperName1);
+      when(activeScraper2.configurationName()).thenReturn(activeScraperName2);
+
+      when(activeScraper1.scrap()).thenReturn(Arrays.asList(scrapedEvent1));
+      when(activeScraper2.scrap()).thenReturn(Arrays.asList(scrapedEvent2, scrapedEvent3));
+
+      when(scraperConfigRepository.allScraperConfigs()).thenReturn(scraperConfigs);
+
+      //then
+      scraperRunService.start();
+
+      verify(lastScrapedEventMarkerRepository).markAllMarkersByIdsAsActive(List.of(activeScraper1Config.scraperId(), activeScraper2Config.scraperId()));
+    }
   }
 
-  @Test
-  void whenScrapedEventWithoutDuplicatesThenSaveAsEvent() throws EventDateInPastException {
-    //given
-    final PageScraperPort activeScraper1 = mock(PageScraperPort.class);
-    final PageScraperPort activeScraper2 = mock(PageScraperPort.class);
+  @Nested
+  class CreateConfigsIfMissingAndCacheBuildTest {
+    @Test
+    void whenFoundScrapersWithoutConfigThenCreateDefault() {
+      //given
+      final PageScraperPort scraper1 = mock(PageScraperPort.class);
+      final PageScraperPort scraper2 = mock(PageScraperPort.class);
+      final List<PageScraperPort> pageScrapers = Arrays.asList(scraper1, scraper2);
 
-    final String activeScraperName1 = "active1";
-    final String activeScraperName2 = "active2";
+      final ZoneId timeZone = ZoneId.systemDefault();
 
-    final ScraperConfig activeScraper1Config = new ScraperConfig(activeScraperName1, ZoneId.systemDefault(), true);
-    final ScraperConfig activeScraper2Config = new ScraperConfig(activeScraperName2, ZoneId.systemDefault(), true);
-    final List<ScraperConfig> scraperConfigs = new ArrayList<>(Arrays.asList(activeScraper1Config, activeScraper2Config));
+      final ScraperConfig scraperConfig1 = new ScraperConfig(1, "Scraper1", timeZone, true);
+      final ScraperConfig scraperConfig2 = new ScraperConfig(2, "Scraper2", timeZone, true);
 
-    final ScrapedEvent scrapedEvent1 = ScrapedEvent.builder(SingleEventDateWithLocation.single(LocalDate.now().plusDays(1), LocalTime.now().plusHours(2), ZoneId.systemDefault(), "Palaven", "Addres 1", "location 2"))
-        .title("Title1")
-        .description("Description1")
-        .build();
-    final ScrapedEvent scrapedEvent2 = ScrapedEvent.builder(SingleEventDateWithLocation.single(LocalDate.now().plusDays(1), LocalTime.now().plusHours(2), ZoneId.systemDefault(), "Thessia", "Addres 2", "location 22"))
-        .title("Title2")
-        .description("Description2")
-        .build();
-    final ScrapedEvent scrapedEvent3 = ScrapedEvent.builder(SingleEventDateWithLocation.single(LocalDate.now().plusDays(1), LocalTime.now().plusHours(2), ZoneId.systemDefault(), "Eden Prime", "Addres 134", "location 166"))
-        .title("Title1")
-        .description("Description1")
-        .build();
-    final List<ScrapedEvent> scrapedEventList = Arrays.asList(scrapedEvent1, scrapedEvent2, scrapedEvent3);
+      final ScraperRunService scraperRunService = new ScraperRunService(scraperConfigRepository, eventFacadeAdapter, lastScrapedEventMarkerRepository, pageScrapers, new ScraperIdNameCache());
+      //when
+      when(scraper2.timeZone()).thenReturn(timeZone);
+      when(scraper1.configurationName()).thenReturn("Scraper1");
+      when(scraper2.configurationName()).thenReturn("Scraper2");
+      when(scraperConfigRepository.allScraperConfigs()).thenReturn(List.of(scraperConfig1));
+      when(scraperConfigRepository.create("Scraper2", timeZone, true)).thenReturn(scraperConfig2);
 
-    final List<PageScraperPort> pageScrapers = Arrays.asList(activeScraper1, activeScraper2);
-    final ScraperRunService scraperRunService = new ScraperRunService(scraperConfigRepository, eventFacadeAdapter, lastScrapedEventMarkerRepository, pageScrapers);
+      //then
+      scraperRunService.createScrapersConfigsIfMissingAndFillIdNameCache();
 
-    //when
-    when(activeScraper1.configurationName()).thenReturn(activeScraperName1);
-    when(activeScraper2.configurationName()).thenReturn(activeScraperName2);
+      verify(scraperConfigRepository).create("Scraper2", timeZone, true);
+    }
 
-    when(activeScraper1.scrap()).thenReturn(Arrays.asList(scrapedEvent1));
-    when(activeScraper2.scrap()).thenReturn(Arrays.asList(scrapedEvent2, scrapedEvent3));
+    @Test
+    void cacheContainsFoundedAndCreatedScrapersConfig() {
+      //given
+      final PageScraperPort scraper1 = mock(PageScraperPort.class);
+      final PageScraperPort scraper2 = mock(PageScraperPort.class);
+      final List<PageScraperPort> pageScrapers = Arrays.asList(scraper1, scraper2);
 
-    when(scraperConfigRepository.allScraperConfigs()).thenReturn(scraperConfigs);
+      final ZoneId timeZone = ZoneId.systemDefault();
 
-    //then
-    scraperRunService.start();
+      final ScraperConfig scraperConfig1 = new ScraperConfig(1, "Scraper1", timeZone, true);
+      final ScraperConfig scraperConfig2 = new ScraperConfig(2, "Scraper2", timeZone, true);
+      final ScraperConfig scraperConfig3 = new ScraperConfig(3, "Scraper3", ZoneId.systemDefault(), true);
+      final ScraperConfig scraperConfig4 = new ScraperConfig(4, "Scraper4", ZoneId.systemDefault(), false);
+      final ScraperConfig scraperConfig5 = new ScraperConfig(5, "Scraper5", ZoneId.systemDefault(), true);
+      final List<ScraperConfig> scraperConfigList = List.of(scraperConfig1, scraperConfig3, scraperConfig4, scraperConfig5);
 
-    verify(activeScraper1).scrap();
-    verify(activeScraper2).scrap();
-    verify(eventFacadeAdapter).saveAll(scrapedEventList);
-  }
+      final ScraperIdNameCache scraperIdNameCache = new ScraperIdNameCache();
+      final ScraperRunService scraperRunService = new ScraperRunService(scraperConfigRepository, eventFacadeAdapter, lastScrapedEventMarkerRepository, pageScrapers, scraperIdNameCache);
 
-  @Test
-  void whenScrapedEventSavedThenMakeLastScrapedEventMarkerDraftActive() throws EventDateInPastException {
-    //given
-    final PageScraperPort activeScraper1 = mock(PageScraperPort.class);
-    final PageScraperPort activeScraper2 = mock(PageScraperPort.class);
+      //when
+      when(scraper2.timeZone()).thenReturn(timeZone);
+      when(scraper1.configurationName()).thenReturn("Scraper1");
+      when(scraper2.configurationName()).thenReturn("Scraper2");
+      when(scraperConfigRepository.allScraperConfigs()).thenReturn(scraperConfigList);
+      when(scraperConfigRepository.create("Scraper2", timeZone, true)).thenReturn(scraperConfig2);
 
-    final String activeScraperName1 = "active1";
-    final String activeScraperName2 = "active2";
+      //then
+      scraperRunService.createScrapersConfigsIfMissingAndFillIdNameCache();
 
-    final ScraperConfig activeScraper1Config = new ScraperConfig(activeScraperName1, ZoneId.systemDefault(), true);
-    final ScraperConfig activeScraper2Config = new ScraperConfig(activeScraperName2, ZoneId.systemDefault(), true);
-    final List<ScraperConfig> scraperConfigs = new ArrayList<>(Arrays.asList(activeScraper1Config, activeScraper2Config));
+      assertEquals(scraperConfig1.scraperId(), scraperIdNameCache.getIdByScraperName(scraperConfig1.configurationName()));
+      assertEquals(scraperConfig2.scraperId(), scraperIdNameCache.getIdByScraperName(scraperConfig2.configurationName()));
+      assertEquals(scraperConfig3.scraperId(), scraperIdNameCache.getIdByScraperName(scraperConfig3.configurationName()));
+      assertEquals(scraperConfig4.scraperId(), scraperIdNameCache.getIdByScraperName(scraperConfig4.configurationName()));
+      assertEquals(scraperConfig5.scraperId(), scraperIdNameCache.getIdByScraperName(scraperConfig5.configurationName()));
 
-    final ScrapedEvent scrapedEvent1 = ScrapedEvent.builder(SingleEventDateWithLocation.single(LocalDate.now().plusDays(1), LocalTime.now().plusHours(2), ZoneId.systemDefault(), "Palaven", "Addres 1", "location 2"))
-        .title("Title1")
-        .description("Description1")
-        .build();
-    final ScrapedEvent scrapedEvent2 = ScrapedEvent.builder(SingleEventDateWithLocation.single(LocalDate.now().plusDays(1), LocalTime.now().plusHours(2), ZoneId.systemDefault(), "Thessia", "Addres 2", "location 22"))
-        .title("Title2")
-        .description("Description2")
-        .build();
-    final ScrapedEvent scrapedEvent3 = ScrapedEvent.builder(SingleEventDateWithLocation.single(LocalDate.now().plusDays(1), LocalTime.now().plusHours(2), ZoneId.systemDefault(), "Eden Prime", "Addres 134", "location 166"))
-        .title("Title1")
-        .description("Description1")
-        .build();
-
-    final List<PageScraperPort> pageScrapers = Arrays.asList(activeScraper1, activeScraper2);
-    final ScraperRunService scraperRunService = new ScraperRunService(scraperConfigRepository, eventFacadeAdapter, lastScrapedEventMarkerRepository, pageScrapers);
-
-    //when
-    when(activeScraper1.configurationName()).thenReturn(activeScraperName1);
-    when(activeScraper2.configurationName()).thenReturn(activeScraperName2);
-
-    when(activeScraper1.scrap()).thenReturn(Arrays.asList(scrapedEvent1));
-    when(activeScraper2.scrap()).thenReturn(Arrays.asList(scrapedEvent2, scrapedEvent3));
-
-    when(scraperConfigRepository.allScraperConfigs()).thenReturn(scraperConfigs);
-
-    //then
-    scraperRunService.start();
-
-    verify(lastScrapedEventMarkerRepository).makeDraftActive(List.of(activeScraperName1, activeScraperName2));
+      assertEquals(scraperConfig1.configurationName(), scraperIdNameCache.getScraperNameById(scraperConfig1.scraperId()));
+      assertEquals(scraperConfig2.configurationName(), scraperIdNameCache.getScraperNameById(scraperConfig2.scraperId()));
+      assertEquals(scraperConfig3.configurationName(), scraperIdNameCache.getScraperNameById(scraperConfig3.scraperId()));
+      assertEquals(scraperConfig4.configurationName(), scraperIdNameCache.getScraperNameById(scraperConfig4.scraperId()));
+      assertEquals(scraperConfig5.configurationName(), scraperIdNameCache.getScraperNameById(scraperConfig5.scraperId()));
+    }
   }
 }
